# param_field_mapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/hde/: hde32.c  hde64.c
dependencies/mem/: pattern.h
dependencies/spdlog/: common.h
dependencies/spdlog/sinks/: callback_sink.h
include/: pfm_api.hpp
launcher/: CMakeLists.txt  launcher.cpp  steam_utils.h
resources/: config.toml
src/: arxan_disabler.cpp  arxan_disabler.h  dllmain.cpp  field_deduction.cpp  field_deduction.hpp  param_access_flags.cpp  param_access_flags.hpp  param_field_mapper.cpp  param_field_mapper.h  param_remapping.cpp  param_remapping.hpp  paramdef_typemap.cpp  paramdef_typemap.h  xml_paramdef.cpp  xml_paramdef.hpp
src/core/: core.h  lite_mem_stream.h  module.h  panic.h  singleton.h  template_utils.h  timer.h  utils.cpp  utils.h
src/fst/: dlut.h  fd4_param_repository.h  fd4_singleton.cpp  fd4_singleton.h  param_file.h  res_cap.h
src/hooks/: control_flow_graph.cpp  control_flow_graph.h  hook_arena.cpp  hook_arena.h  instr_utils.cpp  instr_utils.h  mass_instruction_patcher.cpp  mass_instruction_patcher.hpp  trampoline.cpp  trampoline.h
